...
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <view key="tableFooterView" contentMode="scaleToFill" id="Agp-e2-IXm" userLabel="No Result View">
                                    <rect key="frame" x="0.0" y="136" width="600" height="44"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Result" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ptb-5r-LFZ">
                                            <rect key="frame" x="263" y="11" width="74" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
...
                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ykd-cq-4OF" id="014-fY-Gln">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lastname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZCD-GZ-Qqe">
                                                    <rect key="frame" x="8" y="0.0" width="584" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Firstname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAk-mV-LtX">
                                                    <rect key="frame" x="8" y="26" width="584" height="17"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="Onq-8Q-VK5"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="User List" id="Muf-64-kgb">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="y1U-Ar-xF1">
                            <connections>
                                <action selector="addUser:" destination="rSA-M6-BGS" id="FrH-E1-ctP"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O4w-UG-q0J">
                                <rect key="frame" x="8" y="562" width="584" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="LNS-I2-heS"/>
                                </constraints>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="save:" destination="Lwc-md-8sW" eventType="touchUpInside" id="0Mm-1k-tFr"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
