//
//  UserActionType.swift
//  TutoUser
//
//  Created by Benjamin Dumont on 14/03/2016.
//  Copyright © 2016 bdumont. All rights reserved.
//

import Foundation

/**
 CRUD types
 
 - Create
 - Read
 - Update
 - Delete
 */
enum UserActionType {
    case Create
    case Read
    case Update
    case Delete
}
